--- a/src/shared/styles/vars.scss
+++ b/src/shared/styles/vars.scss
@@ -1,14 +1,3 @@
-$primary: var(--color-primary);
-$secondary: var(--color-secondary);
-$teritary: var(--color-teritary);
-
-$xxs: 320px;
-$xs: 375px;
-$sm: 480px;
-$md: 768px;
-$lg: 1172px;
-$xl: 1200px;
-$xxl: 1366px;
-
-$transition: 0.25s;
-$border-radius: 6px;
+@import './vars/breakpoints.scss';
+@import './vars/colors.scss';
+@import './vars/misc.scss';
