--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,6 @@
 @import '@styles/normalize.scss';
 @import '@styles/reset.scss';
+@import '@styles/fonts.scss';
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
