Storybook story example refactor

--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -2,8 +2,15 @@
 
 .button {
   color: #000;
-  background: lightcoral;
   border: none;
+
+  &.primary {
+    background: lightcoral;
+  }
+
+  &.secondary {
+    background: blue;
+  }
 
   &:hover {
     color: white;
