--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,5 @@
-@import '@styles/normalize.scss';
-@import '@styles/reset.scss';
 @import '@styles/fonts.scss';
+@import '@styles/global.scss';
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
