--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -1,4 +1,20 @@
 @import './mixins/interaction.scss';
+
 @import './mixins/layout.scss';
+
 @import './mixins/position.scss';
+
 @import './mixins/text.scss';
+
+.test {
+  position: absolute;
+
+  display: block;
+  border: 1px solid black;
+
+  color: red;
+
+  cursor: pointer;
+
+  content: '';
+}
