--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,6 @@
 @import '@styles/global.scss';
 
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 16px;
+  font-family: 'Verdana', 'Geneva', 'Tahoma', sans-serif;
 }
