--- a/src/shared/styles/global/normalize.scss
+++ b/src/shared/styles/global/normalize.scss
@@ -1,3 +1,4 @@
+/* stylelint-disable */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -10,7 +11,7 @@
 
 html {
   line-height: 1.15; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -38,7 +39,7 @@ main {
    */
 
 h1 {
-  margin: 0.67em 0;
+  margin: .67em 0;
   font-size: 2em;
 }
 
@@ -51,9 +52,9 @@ h1 {
    */
 
 hr {
+  box-sizing: content-box; /* 1 */
   height: 0; /* 1 */
   overflow: visible; /* 2 */
-  box-sizing: content-box; /* 1 */
 }
 
 /**
@@ -62,8 +63,8 @@ hr {
    */
 
 pre {
-  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
+  font-family: monospace, monospace; /* 1 */
 }
 
 /* Text-level semantics
@@ -83,9 +84,9 @@ a {
    */
 
 abbr[title] {
+  border-bottom: none; /* 1 */
   text-decoration: underline; /* 2 */
   text-decoration: underline dotted; /* 2 */
-  border-bottom: none; /* 1 */
 }
 
 /**
@@ -105,8 +106,8 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
+  font-family: monospace, monospace; /* 1 */
 }
 
 /**
@@ -125,17 +126,17 @@ small {
 sub,
 sup {
   position: relative;
-  vertical-align: baseline;
   font-size: 75%;
   line-height: 0;
+  vertical-align: baseline;
 }
 
 sub {
-  bottom: -0.25em;
+  bottom: -.25em;
 }
 
 sup {
-  top: -0.5em;
+  top: -.5em;
 }
 
 /* Embedded content
@@ -163,8 +164,8 @@ optgroup,
 select,
 textarea {
   margin: 0; /* 2 */
-  font-family: inherit; /* 1 */
   font-size: 100%; /* 1 */
+  font-family: inherit; /* 1 */
   line-height: 1.15; /* 1 */
 }
 
@@ -198,7 +199,7 @@ button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
-  -webkit-appearance: button;
+  appearance: button;
 }
 
 /**
@@ -229,7 +230,7 @@ button:-moz-focusring,
    */
 
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+  padding: .35em .75em .625em;
 }
 
 /**
@@ -241,9 +242,9 @@ fieldset {
 
 legend {
   display: table; /* 1 */
+  box-sizing: border-box; /* 1 */
   max-width: 100%; /* 1 */
   padding: 0; /* 3 */
-  box-sizing: border-box; /* 1 */
   white-space: normal; /* 1 */
   color: inherit; /* 2 */
 }
@@ -271,8 +272,8 @@ textarea {
 
 [type='checkbox'],
 [type='radio'] {
-  padding: 0; /* 2 */
   box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
@@ -290,8 +291,8 @@ textarea {
    */
 
 [type='search'] {
-  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
+  appearance: textfield; /* 1 */
 }
 
 /**
@@ -299,7 +300,7 @@ textarea {
    */
 
 [type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 /**
@@ -309,7 +310,7 @@ textarea {
 
 ::-webkit-file-upload-button {
   font: inherit; /* 2 */
-  -webkit-appearance: button; /* 1 */
+  appearance: button; /* 1 */
 }
 
 /* Interactive
