--- a/src/shared/styles/global/reset.scss
+++ b/src/shared/styles/global/reset.scss
@@ -1,7 +1,7 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   text-decoration: none;
 }
 
@@ -17,7 +17,7 @@ a {
 
 input,
 textarea {
-  -webkit-appearance: none;
+  appearance: none;
 }
 
 h1,
