--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,4 +4,11 @@
 body {
   font-size: 16px;
   font-family: 'Verdana', 'Geneva', 'Tahoma', sans-serif;
+
+  color: #ffffff;
+  background: #121212;
+}
+
+#__next {
+  min-height: 100vh;
 }
